# ESP32

./: LICENSE  README.md
http_server/: gdbinit  sdkconfig  sdkconfig.old
http_server/include/: car_control_frame.h  mqtt.h  nvs_wifi_info.h  smart_config.h  time_update.h
http_server/main/: CMakeLists.txt  app_main.c  car_control_frame.c  http_server.c  mqtt.c  nvs_wifi_info.c  smart_config.c  time_update.c  uart.c  wifi_connect.c
mqtt/: CMakeLists.txt  gdbinit  partitions.csv  sdkconfig  sdkconfig.old
mqtt/ATT7053/: ATT7053.c
mqtt/cmake-build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  config.env  flash_project_args  flasher_args.json  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  mqtt_tcp.cbp  project_description.json
mqtt/cmake-build_debug/bootloader-prefix/tmp/: bootloader-cfgcmd.txt
mqtt/cmake-build_debug/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
mqtt/cmake-build_debug/esp-idf/: Makefile  cmake_install.cmake  esp-idf.cbp
mqtt/cmake-build_debug/esp-idf/app_trace/: Makefile
mqtt/cmake-build_debug/esp-idf/app_update/: Makefile
mqtt/cmake-build_debug/esp-idf/asio/: Makefile
mqtt/cmake-build_debug/esp-idf/att7053/: Makefile  cmake_install.cmake
mqtt/cmake-build_debug/esp-idf/bootloader/: Makefile
mqtt/cmake-build_debug/esp-idf/bootloader_support/: Makefile  cmake_install.cmake
mqtt/cmake-build_debug/esp-idf/bt/: Makefile
mqtt/cmake-build_debug/esp-idf/cbor/: Makefile
mqtt/cmake-build_debug/esp-idf/cmock/: Makefile
mqtt/cmake-build_debug/esp-idf/coap/: Makefile
mqtt/cmake-build_debug/esp-idf/console/: Makefile
mqtt/cmake-build_debug/esp-idf/cxx/: Makefile
mqtt/cmake-build_debug/esp-idf/driver/: Makefile
mqtt/components/att7053/: CMakeLists.txt  att7053.c
mqtt/components/https_req_weather/: CMakeLists.txt  https_request.c  server_root_cert.pem  知心天气.md
mqtt/components/lwutil/: CMakeLists.txt  lwutil.c
mqtt/components/mbedtls_test/: CMakeLists.txt  mbedtls_test.c
mqtt/components/nvs_key/: CMakeLists.txt  nvs_kv.c
mqtt/components/spi_bus/: CMakeLists.txt  spi_bus.c
mqtt/components/uart/: uart.c
mqtt/components/wifi_conn_mgr/: CMakeLists.txt  wifi_connect_mgr.c
mqtt/components/wifi_smart_config/: smartconfig.c
mqtt/components/wmqtt/: CMakeLists.txt  wmqtt.c
mqtt/config/: param.csv
mqtt/include/: ATT7053.h  car_control_frame.h  http_server.h  mqtt.h  nvs_info.h  nvs_kv.h  nvs_wifi_info.h  smart_config.h  time_update.h  wifi_connect_mgr.h
mqtt/main/: CMakeLists.txt  app_main.c  app_mqtt.c  check.c  component.mk  esp_timer_demo.c  http_server.c  mqtt.c  smart_config.c  uart.c  upload_script.html
mqtt/main/include/: http_server.h
mqtt/mbedtls_demo/: mbedtls_hmac_sha1.c
mqtt/nvs/: nvs_kv.c  nvs_kv.h  nvs_wifi_info.c
mqtt/smart_config/: smartconfig.c
mqtt/sntp/: time_update.c
mqtt/timer_demo/: esp_timer_demo.c
mqtt/uart/: car_control_frame.c  uart.c  uart1.c
mqtt/wifi/: wifi_connect.c  wifi_connect_mgr.c
(+118 files in other folders)
